--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,30 @@
     transform: rotate(360deg);
   }
 }
+
+.navbar
+{
+  display: flex;
+  padding-top: 20px;
+  width: 100vw;
+  height: 40px;
+  background-color: rgb(0, 2, 40);
+  align-items: center;
+  justify-content: center;
+}
+.about_on_nav
+{
+  color: wheat;
+  text-decoration: none;
+  padding-left: 30px;
+  padding-bottom: 20px;
+
+}
+.home_on_nav
+{
+  color:wheat;
+  text-decoration: none;
+  padding-right: 30px;
+  padding-bottom: 20px;
+
+}
