--- a/frontend/src/routes/Settings.css
+++ b/frontend/src/routes/Settings.css
@@ -1,6 +1,8 @@
 .body
 {
-    background-color: hsl(210, 40%, 96%); /* Tailwind's slate-100 */
+    background-image: linear-gradient( 111.1deg,  rgba(69,150,164,1) 2.5%, rgba(17,20,34,1) 100.3% );
+ 
+
     width: 100vw;
     height: 100vh;
 }
@@ -11,7 +13,7 @@
     font-size: xx-large;
     font-family: oxanium;
     font-weight: 900;
-    color: #0f172a;
+    color:  rgb(239, 252, 252);
 }
 .settings
 {
@@ -25,7 +27,7 @@
     border: #0f172a;
     border-radius: 10px;
     
-    height: 400px;
+    height: 390px;
     margin-top: 10px;
     background-color:  #0f172a;    
 }
